k8s-apps/monitoring/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - lan-web-secure
  routes:
  - match: Host(`dash.k8s.kgb33.dev`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
      scheme: http
  tls:
    certResolver: letsencrypt
